--- a/Prototipo_iOS_DesMovil/Base.lproj/LaunchScreen.storyboard
+++ b/Prototipo_iOS_DesMovil/Base.lproj/LaunchScreen.storyboard
@@ -20,21 +20,12 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="8fJ-aQ-gTt">
-                                <rect key="frame" x="177.5" y="323.5" width="20" height="20"/>
-                            </activityIndicatorView>
-                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="8fJ-aQ-gTt" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="cKm-BL-Ik6"/>
-                            <constraint firstItem="8fJ-aQ-gTt" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gIN-3n-U1B"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
 </document>
